--- a/scripts/main.css
+++ b/scripts/main.css
@@ -1,5 +1,14 @@
 .hide {display:none;}
 
+.unselectable, button {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 div.controls, div.volume-controls {
     position: fixed;
     width: 50%;
